--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,3 +15,11 @@ input {
         border: none !important;
     }
 }
+
+.list-item-name {
+    transition: all 250ms ease-in-out;
+
+    &:hover {
+        transform: scale(1.03);
+    }
+}
